# LATE

./: .gitmodules  CMakeLists.txt  README.md  download_models.sh  run_late.sh
src/: callback-manager.hpp  engine_device_conf.hpp  log.hpp  main.cpp  optional-ref.hpp  random-generator.hpp  ref-keeper.hpp  sha256.hpp  storage.cpp  storage.hpp  string_util.cpp  string_util.hpp  utf8_util.cpp  utf8_util.hpp  util.hpp  vfs.hpp  wav_util.cpp  wav_util.hpp  whisper.cpp  whisper.hpp
src/sqlite/: sqlite.hpp
src/vad/: vad.cpp  vad.hpp
src/vfs/: embed.h  untar.c  untar.h  vfs.c  vfs.h  zlib.c  zlib.h
static/: bootstrap.js  dom.js  editor.js  ffmpeg.js  importmap.json  index.html  index.js  schema.js  stateid.js  utils.js  waveform.js
